Mise en place du gulp et des fichiers less pour le css

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -1,121 +1,1 @@
-@font-face {
-font-family: 'parallels';
-src: url('font/PARALLELS.otf');
-font-weight: normal;
-font-style: normal;
-}
- h1 {
- 	float:left;
- 	margin:0px;
- 	font-weight: 500;
-	line-height: 1.1;
-	color: inherit;
-	font-size:36px;
- }
- h2 {
- 	font-weight: 500;
-	line-height: 1.1;
-	color: inherit;
- }
-body {
-	position:absolute;
-	top:0px;
-	left:0px;
-	margin:0px;
-	font-family: 'Baloo Thambi',cursive;
-	width:100%;
-	height:100%;
-	overflow:hidden;
-}
-header {
-	height:50px;
-	text-align: center;
-	border-bottom:2px solid #FF7400;
-
-}
-input {
-	margin:0px;
-	padding:0px;
-	box-sizing: border-box;
-}
-button {
-	cursor: pointer;
-	font-family: inherit;
-	font-size: inherit;
-	line-height: inherit;
-	-webkit-appearance: button;
-	overflow: visible;
-	box-sizing: border-box;
-	border:0;
-}
-button:active {
-	border:0;
-}
-#greatTitle {
-	float:left;
-	margin:5px;
-	font-family: 'parallels';
-	display: inline-block;
-}
-
-a {
-	text-decoration: none;
-	color:black;
-}
-a:hover {
-	text-decoration: none;
-	color:black;
-}
-
-.floatR {
-	float:right;
-}
-.normBut {
-	background: none;
-	border:none;
-	padding:10px;
-	height:100%;
-	font-size:13px;
-	text-decoration: none;
-	color:black;
-}
-.normBut:hover {
-	font-size:15px;
-}
-.heaMeBut {
-	display: block;
-}
-.headerMenuWin {
-	position: absolute;
-	top:50px;
-	right:0px;
-	width:200px;
-	text-align:center;
-	z-index:20;
-	background: white;
-	border-bottom:2px solid #FF7400;
-	border-left:2px solid #FF7400;
-	padding:5px;
-}
-.headerRightBut {
-	float:right;
-	border-left:2px solid #FF7400;
-	margin:0px;
-}
-#signWin #openBigSignInWin {
-	float:right;
-	border-bottom:2px solid #FF7400;
-
-	width:100%;
-}
-h2 {
-	font-family: 'Baloo Thambi',cursive;
-}
-header input {
-	margin:5px;
-	height:40px;
-	width:400px;
-	font-size: 30px;
-	padding:5px;
-	display: inline-block;
-}
+@font-face{font-family:'parallels';src:url(font/PARALLELS.otf);font-weight:400;font-style:normal}h1{float:left;margin:0;font-size:36px}body,h2{font-family:'Baloo Thambi',cursive}h1,h2{font-weight:500;line-height:1.1;color:inherit}body{position:absolute;top:0;left:0;margin:0;width:100%;height:100%;overflow:auto}header{text-align:center;border-bottom:2px solid #ff7400}footer,header{height:50px}button,input{box-sizing:border-box}input{margin:0;padding:0}button{cursor:pointer;font-family:inherit;font-size:inherit;line-height:inherit;-webkit-appearance:button;overflow:visible}button,button:active{border:0}#greatTitle,header input{margin:5px;display:inline-block}#greatTitle{float:left;font-family:'parallels'}a,a:hover{text-decoration:none;color:#000}.floatR{float:right}.normBut{background:0 0;border:0;padding:10px;height:100%;font-size:13px;text-decoration:none;color:#000}.normBut:hover{font-size:15px}.heaMeBut{display:block}.headerMenuWin{position:absolute;top:50px;right:0;width:200px;text-align:center;z-index:20;background:#fff;border-bottom:2px solid #ff7400;border-left:2px solid #ff7400;padding:5px}.headerRightBut{float:right;border-left:2px solid #ff7400;margin:0}#signWin #openBigSignInWin{float:right;border-bottom:2px solid #ff7400;width:100%}header input{height:40px;width:400px;font-size:30px;padding:5px}
